Move to intelliJ, improve code